Java tidying
- cleaned up minor more java issues